--- a/styles/estilos.styl
+++ b/styles/estilos.styl
@@ -12,8 +12,12 @@ verde_a = #009999
 verde_trasnparente = rgba(0, 153, 153, .5)
 naranja_a = #FF6633
 
-html, body 
+html, body{ 
 	background blanco_a
-	color black
+	color: black;
 	font-family: 'Open Sans', arial;
-	font-size 16px
+	font-size 16px;
+}
+.Cont{
+	width:100%;
+	}
