--- a/styles/estilos.styl
+++ b/styles/estilos.styl
@@ -1,23 +1,10 @@
-@import "normalize.styl"
-@import "icon_menu"
-@import "fonts.css"
-
-blanco_a = #ffffff
-blanco_b = #F4F1F1
-gris_a = #535353
-gris_b = #686767
-gris_c = #E7E7E7
-gris_trasparente = rgba(0, 0, 0, .2)
-verde_a = #009999
-verde_trasnparente = rgba(0, 153, 153, .5)
-naranja_a = #FF6633
-
-html, body{ 
-	background blanco_a
-	color: black;
+html, body{
 	font-family: 'Open Sans', arial;
-	font-size 16px;
+	font-size: 16px;
 }
-.Cont{
-	width:100%;
+.kapaimg{
+	max-width:100%;
 	}
+img{
+	width:100%;
+}
